; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_show_timezone.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_show_timezone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@session_timezone = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @show_timezone() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = load i32, i32* @session_timezone, align 4
  %4 = call i8* @pg_get_timezone_name(i32 %3)
  store i8* %4, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i8*, i8** %2, align 8
  store i8* %8, i8** %1, align 8
  br label %10

9:                                                ; preds = %0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %10

10:                                               ; preds = %9, %7
  %11 = load i8*, i8** %1, align 8
  ret i8* %11
}

declare dso_local i8* @pg_get_timezone_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
